fix(captions): fix spacing

--- a/src/scripts/components/legacy-stories/caption/caption.module.css
+++ b/src/scripts/components/legacy-stories/caption/caption.module.css
@@ -1,4 +1,5 @@
 .caption {
+  padding: 0.625em 0;
   box-sizing: border-box;
   padding-right: 3.4375em;
   min-height: var(--story-caption-height);
